feat(gantt): enable editable start dates and Gantt
This commit introduces the ability to set a start date for tasks, a critical feature for more flexible project planning.

Key changes include:
- Added a `startDate` field to the `items` schema.
- Modified the Gantt chart to use the new `startDate`, defaulting to the creation date if not set.
- Updated the Gantt chart's `on_date_change` handler to update both `startDate` and `dueDate`.
- ADDED the Gantt chart
- Made task action icons in the main list view always visible for better usability.
- Implemented color-coding for tasks in the Gantt view based on their status (red, yellow, green).
- Added popups to Gantt tasks with "Delete" and "Set Due Date" actions.

Known Issues:
- A persistent "off-by-one-day" bug in the Gantt chart causes dates to shift upon modification. This is likely due to timezone handling within the `frappe-gantt` library. Several workarounds were attempted but the issue remains.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="/node_modules/frappe-gantt/dist/frappe-gantt.css" />
+    <style>
+      .gantt .popup-wrapper {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.1);
+        border-radius: 3px;
+        padding: 10px;
+        font-size: 90%;
+        color: #959da5;
+        z-index: 10;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
